[package]
name = "brrr64"
version = "0.1.0"
authors = ["user"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
wasm-bindgen = "=0.2.65"

[lib]
name = "wasm_brr64"
crate-type = ["cdylib"]
path = "src/wasm_main.rs"

[[bin]]
name = "brr64"
path = "src/main.rs"
