[package]
name = "brr64"
version = "0.1.0"
authors = ["ellcs"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
structopt = "0.3"

[lib]
name = "wasm_brr64"
crate-type = ["cdylib"]
path = "src/wasm_main.rs"

[[bin]]
name = "brr64"
path = "src/main.rs"
