[package]
name = "brr64"
version = "0.1.0"
description = "Find base64 encoded content without decoding."
repository = "https://github.com/ellcs/brr64"
authors = ["ellcs"]
edition = "2018"
license = "MIT and CC0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["brr64_wasm"]

[dependencies]
regex = "1"
structopt = "0.3"
atty = "0.2"
log = "0.4"
env_logger = "0.8.4" 
