[package]
name = "brr64-wasm"
version = "0.1.0"
authors = ["elx <me@ellcs.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "wasm_brr64"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
brr64 = { path = "..", version = "0.1.0" }
wasm-bindgen = "0.2.78"


